--- a/cosmetic_distribution/templates/home.html
+++ b/cosmetic_distribution/templates/home.html
@@ -13,16 +13,8 @@
   </head>
   <body>
     <nav>
-      <ul>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Create account</a></li>
-      </ul>
+      Домашняя страница
     </nav>
-    {% if current_user.is_authenticated %}
-    <h1>You are logged in</h1>
     <a href="/logout">Logout</a>
-    {% else %}
-    <h1>You are not logged in</h1>
-    {% endif %}
   </body>
 </html>
