--- a/cosmetic_distribution/templates/404.html
+++ b/cosmetic_distribution/templates/404.html
@@ -8,11 +8,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary" data-new-gr-c-s-check-loaded="14.1162.0" data-gr-ext-installed="">
-    {% include 'header.html' %}
-    {% block content %}
-
-    {% endblock %}
-    {% include 'footer.html' %}
+    <main>
+      <section class="container my-5 px-4">
+        <h1 class="text-center">Страница не найдена</h1>
+        <p class="text-center my-4">Извините. Такой страницы не существует.</p>
+        <p class="text-center my-4">
+          {% if user.is_authenticated %}
+            <a href="{{ url_for('home') }}">Вернуться на главную</a>
+          {% else %}
+            <a href="{{ url_for('login') }}">Вернуться на главную</a>
+          {% endif %}
+        </p>
+      </section>
+    </main>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
