--- a/cosmetic_distribution/templates/login.html
+++ b/cosmetic_distribution/templates/login.html
@@ -1,28 +1,38 @@
-{% extends 'base.html' %}
-{% block content %}
-  <main class="form-signin m-auto">
-    <form class="text-center" method="post" action="{{ url_for('login') }}">
-      <h1 class="h3 mb-3 fw-normal">Авторизируйтесь</h1>
-      <div class="form-floating">
-        <input type="text" class="form-control" id="floatingInput" name="username" />
-        <label for="floatingInput">Имя пользователя</label>
-      </div>
-      <div class="form-floating mt-3">
-        <input type="password" class="form-control" id="floatingPassword" name="password" />
-        <label for="floatingPassword">Пароль</label>
-      </div>
-      <button class="btn btn-primary mt-3 py-2" type="submit">Войти</button>
-      <div class="form-floating mt-3">
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <ul>
-              {% for message in messages %}
-                <span style="color: red">{{ message }}</span>
-              {% endfor %}
-            </ul>
-          {% endif %}
-        {% endwith %}
-      </div>
-    </form>
-  </main>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  </head>
+  <body class="d-flex align-items-center py-4 bg-body-tertiary" data-new-gr-c-s-check-loaded="14.1162.0" data-gr-ext-installed="">
+    <main class="position-absolute top-50 start-50 translate-middle">
+      <form class="text-center" method="post" action="{{ url_for('login') }}">
+        <h1 class="h3 mb-3 mt-3">Авторизируйтесь</h1>
+        <div class="form-floating">
+          <input type="text" class="form-control" id="floatingInput" name="username" />
+          <label for="floatingInput">Имя пользователя</label>
+        </div>
+        <div class="form-floating mt-3">
+          <input type="password" class="form-control" id="floatingPassword" name="password" />
+          <label for="floatingPassword">Пароль</label>
+        </div>
+        <button class="btn btn-primary mt-3 py-2" type="submit">Войти</button>
+        <div class="form-floating mt-3">
+          {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              <ul>
+                {% for message in messages %}
+                  <span style="color: red">{{ message }}</span>
+                {% endfor %}
+              </ul>
+            {% endif %}
+          {% endwith %}
+        </div>
+      </form>
+    </main>
+  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</html>
