feat: add Product model.

--- a/cosmetic_distribution/templates/add_product.html
+++ b/cosmetic_distribution/templates/add_product.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}
-  Складские остатки
+  Добавить товар
 {% endblock %}
 {% block content %}
   <div class="position-absolute top-50 start-50 translate-middle">
-    <div>Складские остатки</div>
+    <div>Здесь форма для добавления продукта.</div>
   </div>
 {% endblock %}
