--- a/cosmetic_distribution/templates/header.html
+++ b/cosmetic_distribution/templates/header.html
@@ -1,6 +1,9 @@
 <header class="fixed-top border-bottom text-center py-3" style="background-color: silver;">
   <ul class="nav nav-links">
     <li class="nav-link">
+      <a href="/add_product" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Добавить товар</a>
+    </li>
+    <li class="nav-link">
       <a href="/home" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Складские остатки</a>
     </li>
     <li class="nav-link">
