--- a/cosmetic_distribution/templates/header.html
+++ b/cosmetic_distribution/templates/header.html
@@ -4,7 +4,7 @@
       <a href="/add_product" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Добавить товар</a>
     </li>
     <li class="nav-link">
-      <a href="/home" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Складские остатки</a>
+      <a href="/products" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Складские остатки</a>
     </li>
     <li class="nav-link">
       <a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Создать заказ</a>
