--- a/cosmetic_distribution/templates/header.html
+++ b/cosmetic_distribution/templates/header.html
@@ -9,6 +9,9 @@
     <li class="nav-link">
       <a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Создать заказ</a>
     </li>
+    <li class="nav-link">
+      <a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Все заказы</a>
+    </li>
     <li class="nav-link ms-auto me-3">
       <a href="/logout" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Выйти</a>
     </li>
