--- a/cosmetic_distribution/templates/products.html
+++ b/cosmetic_distribution/templates/products.html
@@ -3,21 +3,28 @@
   Складские остатки
 {% endblock %}
 {% block content %}
-  <div class="container-fluid mt-5">
+  <div class="container-fluid mt-5 mb-5">
     <table class="table table-bordered border-dark">
       <thead class="table-dark">
         <tr>
+          <th style="width: 100px;">Бренд</th>
           <th>Название</th>
-          <th>Объем</th>
-          <th>Количество</th>
+          <th style="width: 100px;">Объем</th>
+          <th style="width: 100px;">Количество</th>
+          <th style="width: 150px;">Действия</th>
         </tr>
       </thead>
       <tbody>
         {% for product in products %}
           <tr>
-            <td>{{ product.title }}</td>
-            <td>{{ product.volume }}</td>
-            <td>{{ product.amount }}шт</td>
+            <td class="text-center">{{ product.brand }}</td>
+            <td class="text-start">{{ product.title }}</td>
+            <td class="text-end">{{ product.volume }}</td>
+            <td class="text-end">{{ product.amount }}шт</td>
+            <td class="btn-group btn-group-sm" role="group" aria-label="Basic mixed styles example">
+              <a href="#" class="btn btn-warning" role="button">Редактировать</a>
+              <a href="#" class="btn btn-danger" role="button">Удалить</a>
+            </td>
           </tr>
         {% endfor %}
       </tbody>
