--- a/cosmetic_distribution/templates/products.html
+++ b/cosmetic_distribution/templates/products.html
@@ -11,7 +11,7 @@
           <th>Название</th>
           <th style="width: 100px;">Объем</th>
           <th style="width: 100px;">Количество</th>
-          <th style="width: 150px;">Действия</th>
+          <th style="width: 70px;">Действия</th>
         </tr>
       </thead>
       <tbody>
@@ -21,9 +21,12 @@
             <td class="text-start">{{ product.title }}</td>
             <td class="text-end">{{ product.volume }}</td>
             <td class="text-end">{{ product.amount }}шт</td>
-            <td class="btn-group btn-group-sm" role="group" aria-label="Basic mixed styles example">
-              <a href="#" class="btn btn-warning" role="button">Редактировать</a>
-              <a href="#" class="btn btn-danger" role="button">Удалить</a>
+            <td class="text-center">
+              <form method="POST" action="{{ url_for('delete_product', id = product.id) }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                <input type="hidden" name="_method" value="DELETE" />
+                <input type="submit" class="btn btn-danger btn-sm" role="button" value="Удалить" />
+              </form>
             </td>
           </tr>
         {% endfor %}
