feat: add OrderProduct model, create add_order view.

--- a/cosmetic_distribution/templates/header.html
+++ b/cosmetic_distribution/templates/header.html
@@ -7,10 +7,10 @@
       <a href="/products" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Складские остатки</a>
     </li>
     <li class="nav-link">
-      <a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Создать заказ</a>
+      <a href="/add_order" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Создать заказ</a>
     </li>
     <li class="nav-link">
-      <a href="#" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Все заказы</a>
+      <a href="/orders" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Все заказы</a>
     </li>
     <li class="nav-link">
       <a href="/add_customer" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover">Создать клиента</a>
