--- a/cosmetic_distribution/templates/add_customer.html
+++ b/cosmetic_distribution/templates/add_customer.html
@@ -16,6 +16,19 @@
             {% endfor %}
           </ul>
         {% endif %}
+        {% with messages=get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            <div>
+              {% for category, message in messages %}
+                {% if category == 'success' %}
+                  <span style="color: green">{{ message }}</span>
+                {% elif category == 'error' %}
+                  <span style="color: red">{{ message }}</span>
+                {% endif %}
+              {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
       </div>
     </form>
   </main>
