--- a/cosmetic_distribution/templates/login.html
+++ b/cosmetic_distribution/templates/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Авторизация</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary" data-new-gr-c-s-check-loaded="14.1162.0" data-gr-ext-installed="">
     <main class="position-absolute top-50 start-50 translate-middle">
-      <form class="text-center" method="post" action="{{ url_for('login') }}">
+      <form class="text-center" method="post" action="{{ url_for('main.login') }}">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         <h1 class="h3 mb-3 mt-3">Авторизируйтесь</h1>
         <div class="form-floating">
